# aurelius

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: block.rs  errors.rs  lib.rs  transaction.rs  utxo.rs
corelib/: Cargo.toml
corelib/src/: block.rs  blockchain.rs  errors.rs  lib.rs  mempool.rs  merkle.rs  test_utils.rs  transaction.rs  utils.rs  utxo.rs
corelib/src/net/: message.rs  mod.rs  protocol.rs
node/: Cargo.toml
node/src/: main.rs  mempool.rs  node.rs
wallet/: Cargo.toml
