[workspace]
members = ["core", "wallet", "node"]
resolver = "2"

[worskpace.package]
name = "kratos"
version = "0.1.0"
edition = "2021"
description = "A simple blockchain"
license = "MIT"
repository = "h"
readme = "README.md"
keywords = ["blockchain"]
categories = ["cryptography"]

[workspace.dependencies]
borsh = "1.5.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["full", "sync", "fs", "tracing"] }
uuid = { version = "1.11.0", features = ["v4"] }
