[package]
name = "corelib"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.4"
borsh = { workspace = true, features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
